--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pinia/nuxt": "^0.4.6",
     "@vercel/analytics": "^1.0.0",
     "feather-icons": "^4.29.0",
+    "tw-elements": "^1.0.0-beta2",
     "vue3-tailwind": "^0.3.4"
   }
 }
